Mobile compatiblity, text overflowing fix

--- a/src/lwc/workflowProfilingLwc/workflowProfilingLwc.css
+++ b/src/lwc/workflowProfilingLwc/workflowProfilingLwc.css
@@ -59,8 +59,12 @@
 }
 
 .slds-card__header-title {
-    font-size: 1rem; /* Example size, adjust as needed */
-    font-weight: 700; /* Adjust font weight as needed */
+    font-size: 1rem;
+    font-weight: 700;
 }
 
-
+.custom-truncate {
+    max-width: 100%;
+    white-space: pre-wrap;
+    overflow: hidden;
+}
